<resources>
    <string name="app_name">Phodit</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="black_and_white"><![CDATA[Black & White]]></string>
    <string name="save_to_gallery">Save</string>
    <string name="saving">Saving…</string>
    <string name="working">Working…</string>
    <string name="resize">Resize</string>
    <string name="undo">Undo</string>
    <string name="rotate">Rotate</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
</resources>
